--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 
 #level-title {
   font-family: 'Press Start 2P', cursive;
-  font-size: 3rem;
-  margin:  5%;
+  font-size: 2rem;
+  margin:  2%;
   color: #FEF2BF;
 }
 
@@ -18,12 +18,26 @@ body {
 }
 
 .btn {
-  margin: 25px;
+  margin: 15px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
   border: 10px solid black;
   border-radius: 20%;
+}
+
+.start-button {
+  background-color: #011F3F;
+  color: #FEF2BF;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1.5rem;
+  border: 5px solid #FEF2BF;
+  border-radius: 20%;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  cursor: pointer;
+
 }
 
 .game-over {
@@ -50,4 +64,11 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+
+p{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1rem;
+  margin:  5%;
+  color: #FEF2BF;
 }
